app/style/Tutorial.less
@import (reference) "./main.less";

/** GetStarted tutorial classes **/
.getstarted-tutorial {
  display: flex;
  background-color: var(--background-container);

  .tutorial-side {
    width: 47%;
    height: 100vh;
    overflow: hidden;


    video {
      vertical-align: middle;
      height: 100%;
      object-fit: cover;
    }
  }

  .tutorial-main {
    width: 46%;
    height: 100vh;
    padding: 22.8vh 40px 0px;
    overflow-y: auto;
  }

  .tutorial-main-toolbar {
    display: flex;

    .next-button {
      margin-left: 40px;
      margin-top: 8px;
      height: 16px;
      padding: 5px 20px 6px 20px;
    }

    .skip-button {
      margin-right: 10px;
      margin-top: 8px;
      height: 16px;
      padding: 5px 20px 6px 0px;
      width: 34px;
    }
  }

  .tutorial-main-text {
    color: var(--modal-text);
    font-size: 13px;
    column-count: 2;
    margin-bottom: 2em;
    min-height: 33em;
    line-height: 19px;

    h1 {
      color: var(--tutorial-header);
      font-size: 35px;
      line-height: 35px;
      column-span: all;
      font-weight: 400;
      -webkit-margin-before: 0px;
    }

    strong {
      font-weight: 600;
    }

    p {
      break-inside: avoid-column;
    }

    ul {
      margin: 0em 2em 2em -3.1em;
    }
  }

  @media (max-height: 700px) {
    .tutorial-main {
      padding-top: 10vh;
      height: 89vh;
    }
  }

  @media (max-height: 460px) {
    .tutorial-main-toolbar {
      height: 80px;
    }
  }
}

/** Wallet Tutorial Classes */
.wallet-tutorial {
  background-color: var(--background-back-color);
  padding: 60px;
  color: var(--title-text-and-button-background);

  .tutorial-title {
    font-size: 27px;
    margin-bottom: 10px;
  }

  .tutorial-subtitle {
    font-size: 11px;
    margin-bottom: 20px;
    color:var(--new_wallet-label);
  }

  .tutorial-close-button {
    height: 12px;
    width: 12px;
    background-repeat: no-repeat;
    background-size: 12px;
    background-image: var(--x-grey);
    float: right;
    padding: 0;
  }

  .tutorial-standard-page {
    display: flex;
    justify-content: space-between;
    flex-wrap: wrap;
  }

  .tutorial-text {
    width: 40%;
    margin-right: 30px;
    white-space: pre-line;
    color: var(--wallet-tutorial-text);
  }

  .tutorial-page-indicator a {
    cursor: pointer;
    color: var(--wallet-tutorial-link);
  }

  .tutorial-image-and-indicator {
    text-align: center;
    height: 35vw;
    width: 35vw;
    min-width: 340px;
    min-height: 340px;
  }

  .tutorial-image {
    background-repeat: no-repeat;
    background-size: 100%;
    background-position: center;
    width: 100%;
    height: 100%;
  }

  .tutorial-image-lifecycle-01 {
    background-image: var(--llifecycle-01);
  }

  .tutorial-image-lifecycle-02 {
    background-image: var(--llifecycle-02);
  }

  .tutorial-image-lifecycle-03 {
    background-image: var(--llifecycle-03);
  }

  .tutorial-image-lifecycle-04 {
    background-image: var(--llifecycle-04);
  }

  .tutorial-image-lifecycle-05 {
    background-image: var(--llifecycle-05);
  }

  .tutorial-image-lifecycle-06 {
    background-image: var(--llifecycle-06);
  }

  .tutorial-image-staking-01 {
    background-image: var(--sstaking-01-icon);
  }
}

@media screen and (max-width: 800px) {
  .wallet-tutorial {
    padding: 30px 0;

    .tutorial-close-button {
      margin-right:20px;
    }
    .tutorial-title,
    .tutorial-subtitle{
      margin-left:20px;
    }

    .tutorial-text {
      width: 100%;
      margin-right: 20px;
    }
    .tutorial-page {
      padding: 0 20px 125px 20px;
      background-color: var(--background-back-color);
    }
    .tutorial-standard-page {
      flex-direction: column;
    }    
  }  
}
@media screen and (max-width: 670px) {
  .getstarted-tutorial .tutorial-main-text {
    max-height: 650px;
  }

  .tutorial-main-toolbar {
      justify-content: space-between;
      flex-wrap: nowrap;

      .next-button {
        margin-left: 10px !important;
        height: 16px;
        padding: 5px 20px 6px 20px;
        margin-top: 0px !important;
      }
      
      .step-indicator {
          display: flex;
          flex: 1;
          align-items: center;
          justify-content: space-between;
          flex-wrap: nowrap;
          max-width: 100px;

          .step.unchecked,
          .step.current,
          .step.checked {
            margin:0;
          }
      }    
      
      .skip-button {
          margin-top: 0 !important;
          height: inherit;
          width: 26px;
          padding: 0;
      }      
  }  
}
@media screen and (max-width: 916px) {
  .getstarted-tutorial .tutorial-main {
    top: 88px;
    left: 21px;
  }
}

@media screen and (max-width: 768px) {
  .getstarted-tutorial .tutorial-main {
    padding-top: 10vh;
  }
  .getstarted-tutorial .tutorial-main-text {
    column-count: 1;
    padding-right: 55px;
  }
}

@media screen and (max-width: 541px) {
  .tutorial-main {
    top: 8px;
  }
  .getstarted-tutorial .tutorial-main-text {
    padding-right: 0;
    padding-bottom: 0;
    margin-bottom: 0;
    min-height: inherit;
  }
}

@media screen and (max-width: 500px) {
  .getstarted-tutorial {
    flex-direction: column;

    .tutorial-main-text {
      max-height: inherit;
      h1 {
        font-size: 21px;
      }
    }

    .tutorial-side {
      height: 42vh;
      width: 100%;
      
      video {
        height: 336px;
      }
    }

    .tutorial-main {
      top: 25px;
      width: inherit;
      padding: 30px;
      height: 42vh;
    }
    
    .tutorial-main-toolbar {
      position: fixed;
      bottom: 0px;
      background-color: var(--onboard-toolbar-background);
      left: 0;
      height: 70px;
      align-items: center;
      padding: 0;
      width: 100%;
      box-shadow: 0px -5px 21px 0px var(--onboard-toolbar-shadow);

      .next-button {
        margin: 0 30px 0 0;
      }
      
      .skip-button {
        margin: 0 0 0 30px;
      }
    }
  }
}

